nullaway_error_cb50c4c3-66f0-46f8-a2d2-644f213f409c.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/ImageLayer.java:18: error: [NullAway] @NonNull field image not initialized
  private MapImage image;
                   ^
    (see http://t.uber.com/nullaway )
